--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+  color:white;
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  width: 100%;
+  display: flexbox;
+  margin-top: auto;
+  margin-bottom: auto;
+  align-content: center;
+  outline: 5px solid rgb(79, 80, 82);
+  outline-offset: -25px;
 }
 
-.App-link {
-  color: #61dafb;
+div{
+  /* border:white 1px solid; */
+  height:fit-content;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.stripe{
+  vertical-align: middle;
+  /* border: grey 1px solid; */
+  width: 100%;
+  min-height: 300px;
+  padding: 30px;
+}
+.choice{
+  font-size: 50px;
+}
+.roundbtn{
+  background: #2f3644;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background: linear-gradient(to bottom, #d34a50, #da485b);
+  transform: rotateZ(0deg);
+  margin: 25px;
+  font-size: 40px;
+  vertical-align: middle;
+  line-height: 2  ;
+  border: none;
+  box-shadow: 0 6px 0 rgba(0,0,0,0.25),
+              0 6px 0 rgb(206, 50, 50),
+              0 6px 16px rgba(0,0,0,0.45);
+}
+
+.roundbtn:active{
+  box-shadow: 0 1px 2px rgba(0,0,0,0.45);
+  transform: translateY(4px);
+}
+
+.spsresult{
+  color:white;
 }
