--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
 div{
   /* border:white 1px solid; */
   height:fit-content;
+  padding-left: auto;
+  padding-right: auto;
 }
 
 .stripe{
@@ -45,10 +47,22 @@ div{
 }
 
 .roundbtn:active{
-  box-shadow: 0 1px 2px rgba(0,0,0,0.45);
+  box-shadow: 0 4px 6px rgba(0,0,0,0.45);
   transform: translateY(4px);
 }
 
 .spsresult{
-  color:white;
+  font-style: italic;
+  font-size: large;
+  font-weight: bold;
+
+}
+.redText{
+  color:#d34a50;
+}
+.yellowText{
+  color:rgb(231, 210, 19);
+}
+.greenText{
+  color:green;
 }
